--- a/style.css
+++ b/style.css
@@ -1,16 +1,24 @@
+body {
+  background-color: #FFFFFF;
+  padding: 0;
+  margin: 0;
+  text-align: center;
+  font-family: "Roboto", arial;
+}
+
 .container {
   display: flex;
-  background-color: #1F2937;
   flex-direction: column;
 }
 
 /* Nav */
 
-.nav-container {
+.navbar {
   display: flex;
   color: #F9FAF8;
   background-color: #1F2937;
   padding: 20px 0px 20px 100px;
+  align-items: center;
 }
 
 .header-logo {
@@ -20,7 +28,7 @@
   margin-right: auto;
 }
 
-.headero-logo a {
+.header-logo a {
   color: #FFFFFF;
   text-decoration: none;
 }
@@ -29,10 +37,9 @@
   display: flex;
   margin-left: auto;
   padding: 0px 100px 0px 0px;
-  text-decoration: none;
 }
 
-.nav-link a {
+.nav-links a {
   text-decoration: none;
   color: #E5E7EB;
   font-size: 18px;
@@ -42,16 +49,16 @@
 
 /* Hero */
 
-.hero-container {
+.hero {
   display: flex;
   color: #F9FAF8;
-  BACKGROUND-COLOR: #1F2937;
+  background-color: #1F2937;
   align-items: center;
   justify-content: center;
   padding: 90px;
 }
 
-.hero-main {
+.hero-cta {
   flex-basis: 400px;
   display: flex;
   flex-direction: column;
@@ -59,20 +66,20 @@
   margin-right: 50px;
 }
 
-.hero-main p {
-  font-family: "Roberto", arial;
+.hero-cta p {
+  font-family: "Roboto", arial;
   opacity: 0.7;
 }
 
 h1 {
-  font-size: 50px;
-  font-weight: 800;
+  font-size: 48px;
+  font-weight: bold;
   color: #F9FAF8;
   margin: 0;
-  font-family: "Roberto", arial;
+  font-family: "Roboto", arial;
 }
 
-button {
+.hero button {
   display: block;
   color: #3882F6;
   text-align: center;
@@ -92,6 +99,98 @@ button {
   height: 175px;
 }
 
-.header-links {
-  margin-left: auto;
+/* Content */
+
+.content {
+  align-items: center;
+}
+
+.info-content {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.info-content img {
+  width: 200px;
+  height: 200px;
+  object: cover;
+  border: 4px solid #3882F6;
+  border-radius: 15px;
+  margin: 5px 20px 0px 20px;
+}
+
+/* Quote */
+
+.quote {
+  display: flex;
+  flex-direction: column;
+  background-color: #E5E7EB;
+  padding: 0 200px;
+}
+
+.quote p {
+  font-size: 36px;
+  color: #1F2937;
+  font-style: italic;
+  font-weight: lighter;
+  font-family: "Roboto", arial;
+}
+
+.quote b {
+  padding-right: 10px;
+  padding-bottom: 20px;
+  font-family: "Roboto", arial;
+  text-align: right;
+}
+
+/* Sign up */
+
+.sign-up {
+  background-color: #3882F6;
+  margin: 50px 200px;
+  padding: 10px 80px;
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+  border-color: none;
+}
+
+.sign-item {
+  flex: 1;
+}
+
+.sign-text {
+  text-align: left;
+}
+
+.sign-text p {
+  color: #fff;
+  opacity: 0.7;
+  margin: 5px 30px 30px 50px;
+}
+
+h3 {
+  color: #fff;
+  font-family: "Roboto", arial;
+  padding: 0;
+  margin: 30px 0px 0px 50px;
+}
+
+.sign-button button {
+  color: #fff;
+  font-family: "Roboto", arial;
+  border-color: #fff;
+  border-radius: 8px;
+  background-color: #3882F6;
+  padding: 5px 25px;
+  font-size: 15px;
+}
+
+/* Footer */
+
+.footer {
+  background-color: #1F2937;
+  color: #fff;
+  font-family: "Roboto", arial;
 }
